--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <script src="assets/js/grayscale.js"></script>
+  <script src="assets/js/colorapi.js"></script>  
   <script src="assets/js/colorpicker.js"></script>
   <script src="assets/js/fileupload.js"></script>
 </body>
