--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
   <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/test.css">
+  <link rel="icon" href="/Users/nehathumu/Desktop/Skype/Haverford/web app development/colorpicker/finalproj.color/assets/img/favicon.ico">
 </head>
 
 <body id="page-top" onload="pageLoaded()">
