add icon, name, rename file

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Home - proj_prototype</title>
+  <title>Palette Picker</title>
   <meta name="description" content="web app development week 5">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
   <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/test.css">
-  <link rel="icon" href="/Users/nehathumu/Desktop/Skype/Haverford/web app development/colorpicker/finalproj.color/assets/img/favicon.ico">
+  <link rel="icon" href="assets/img/favicon.ico">
 </head>
 
 <body id="page-top" onload="pageLoaded()">
@@ -149,7 +149,7 @@
   <script src="assets/js/grayscale.js"></script>
   <script src="assets/js/colorapi.js"></script>  
   <script src="assets/js/colorpicker.js"></script>
-  <script src="assets/js/fileupload.js"></script>
+  <script src="assets/js/filestuff.js"></script>
 </body>
 
 </html>
