--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
   <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/test.css">
+  <link rel="stylesheet" href="assets/css/colorpicker.css">
   <link rel="icon" href="assets/img/favicon.ico">
 </head>
 
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="col">
-          <button class="file-upload__button" type="button" onclick="downloadPalette()"> Download Palette </button>
+          <button class="download__button" type="button" onclick="downloadPalette()"> Download Palette </button>
         </div>
       </div>
     </div>
