added button link

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger"
               href="#about">Pick a Palette</a></li>
-          <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">Find
-              similar images</a></li>
           <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger"
               href="#contact">contact</a></li>
         </ul>
@@ -103,16 +101,11 @@
     style="background-image: url('assets/img/bluebg.png');">
     <div class="container">
       <div class="col-lg-6 offset-lg-0 mx-auto">
-        <h1>Find similar images</h1>
-        <p>Do you have a theme in mind but are unable to find the image with the perfect color scheme? <br><br>No
-          worries.</p>
+
       </div>
       <div class="row">
         <div class="col-lg-6 offset-lg-0 mx-auto">
-          <p>// find a way to project this site:&nbsp;<a href="https://wikiview.net/"><span
-                style="text-decoration: underline;">https://wikiview.net/</span></a><span
-              style="text-decoration: underline;">&nbsp;and somehow obtain images from it &amp;</span>&nbsp;load
-            onto this site&nbsp;<span style="text-decoration: underline;">//</span></p>
+
         </div>
         <div class="col-lg-6 offset-lg-0 mx-auto">
         </div>
@@ -127,10 +120,7 @@
           <p>Feel free to give feedback about this site!</p>
           <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"
-                background-color="#000080" onclick="window.location.href='https://w3docs.com';"><i
-                  class="fa fa-deviantart fa-fw"></i><span class="network-name">Deviantart</span></button></li>
-            <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"
-                onclick="window.location.href='https://w3docs.com';"> <i class="fa fa-instagram fa-fw"></i><span
+                onclick="window.location.href='https://www.instagram.com/aheniru/?hl=en';"> <i class="fa fa-instagram fa-fw"></i><span
                   class="network-name">Instagram</span></button></li>
           </ul>
         </div>
