making it look pretty~

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </nav>
-  <header class="masthead" style="background-image: url('assets/img/bgtest2.jpg');/*opacity: 0.5;*/">
+  <header class="masthead" style="background-image: url('assets/img/mainbg.jpg');/*opacity: 0.5;*/">
     <div class="intro-body">
       <div class="container">
         <div class="row">
@@ -106,7 +106,7 @@
     </div>
   </section>
   <section id="download" class="download-section content-section text-center"
-    style="background-image: url('assets/img/bluebg.png');">
+    style="filter: brightness(80%); background-image: url('assets/img/minibg.jpg');">
     <div class="container">
       <div class="col-lg-6 offset-lg-0 mx-auto">
 
