--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@
                 <td colspan="5">
                   <div>
                     <button class="download__button" type="button" onclick="downloadPalette()"> Download Palette </button>
-                    <button class="download__button" type="button" onclick="brightness()"> click</button>
                     <div class="slidecontainer">
-                      <input type="range" min="0" max="100" value="50" class="slider" id="myRange"  onchange="brightness(this.value)">
+                      <input type="range" min="0" max="360" value="180" class="slider" id="hue"  onchange="brightness()">
+                    </div>
+                    <div class="slidecontainer">
+                      <input type="range" min="0" max="100" value="50" class="slider" id="saturation"  onchange="brightness()">
+                    </div>
+                    <div class="slidecontainer">
+                      <input type="range" min="0" max="100" value="50" class="slider" id="brightness"  onchange="brightness()">
                     </div>
                   </div>
                 </td>
