--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <div class="range-slider">
                   <input class="range-slider__range" type="range" value="180" min="0" max="360" id="hue"
                     onchange="hsleditor()">
+                  <label for="hue"></label>
                   <span class="range-slider__value">0</span>
                 </div>
                 <br>
