--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,6 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mx-auto" style="opacity: 100;">
-            <h1 class="brand-heading"></h1>
             <p class="intro-text">Looking for the perfect color scheme?</p>
             <p class="intro-text">Look no further.</p><a class="btn btn-link btn-circle" role="button" href="#about"><i
                 class="fa fa-angle-double-down animated"></i></a>
@@ -58,7 +57,6 @@
           <table>
             <thead>
               <tr>
-                <th></th>
                 <th width="150">Hovered color</th>
                 <th width="150">Selected color 1</th>
                 <th width="150">Selected color 2</th>
@@ -109,7 +107,6 @@
                 <div class="range-slider">
                   <input class="range-slider__range" type="range" value="180" min="0" max="360" id="hue"
                     onchange="hsleditor()">
-                  <label for="hue"></label>
                   <span class="range-slider__value">0</span>
                 </div>
                 <br>
