added bold text

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-0 mx-auto">
           <h2>Pick a palette</h2>
-          <p>How it works:</p>
+          <p><b>How it works:</b></p>
           <p>Select an image/images that you want to use as reference. Then you will have the option to pick colors from
             these images in order to create a palette.</p>
         </div>
         <div>
-          <p>Upload Your Image:</p>
+          <p><b>Upload Your Image:</b></p>
           <table>
             <thead>
               <tr>
